--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.io/AnnabelNkir/News_app",
+  "homepage": "https://annabelnkir.github.io/News_app/",
   "name": "news",
   "version": "0.1.0",
   "private": true,
