--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AnnabelNkir.github.io",
+  "homepage": "https://annabelnkir.github.io",
   "name": "news",
   "version": "0.1.0",
   "private": false,
