--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": ".",
+  "homepage": "https://annabelnkir.github.io/",
   "name": "news",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
